# FastAPI-Event-Tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/event_tracker/: crud.py  csv_export.py  db.py  main.py  schemas.py
tests/: test_events_crud.py  test_events_export.py  test_events_filters.py  test_health.py
