[project]
name = "fastapi-event-tracker"
version = "0.1.0"
description = "REST API for tracking timestamped events with filtering and export"
requires-python = ">=3.10"
dependencies = [
    "fastapi>0.104.0",
    "uvicorn[standard]>0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]


[tool.pytest.ini_options]
testpaths = ["tests"]